Fix broken CSS: permalink:pretty was misrouting style.css, fix montreal.png path, commit missing affiliations section

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -269,7 +269,7 @@ header {
     text-align: center;
     color: #fff;
     background-attachment: scroll;
-    background-image: url('{{ site.baseurl }}/montreal.png');
+    background-image: url('{{ site.baseurl }}/img/montreal.png');
     background-position: center center;
     background-repeat: none;
     -webkit-background-size: cover;
