--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
 ---
 layout: style
+permalink: /style.css
 ---
